feat(edit-request): implement edit request feature (#38)
- ensure ensure the user doesn't pass an empty object
- Document the feature in the swagger docs
- implement error handling for failed delivery

[Delivers #168131439]
